--- a/github.ioSourceCode0/source/_posts/简单工厂模式.md
+++ b/github.ioSourceCode0/source/_posts/简单工厂模式.md
@@ -1,11 +1,14 @@
 ---
 title: 设计模式之简单工厂模式
 date: 2018-12-01 16:31:22
+categories:
+- 设计模式
 tags:
   - JS
   - ES6
   - 设计模式
   - 简单工厂模式
+cover_picture: images/pattern.jpg
 ---
 
 ## 前言
