--- a/github.ioSourceCode0/source/_posts/我做的一些小玩意儿.md
+++ b/github.ioSourceCode0/source/_posts/我做的一些小玩意儿.md
@@ -1,9 +1,12 @@
 ---
 title: 我做的一些小玩意儿
 date: 2018-12-04 20:41:22
+categories:
+- 杂货
 tags:
   - 杂货
   - 日常修仙
+cover_picture: images/Node.png
 ---
 
 ## 前言
